# CEINMS

./: CMakeLists.txt  FindOpenSim.cmake  FindXERCES.cmake  FindXSD.cmake  NOTICE.txt  README.md
docs/: CMakeLists.txt  conf.py.in
docs/static/: ceinms.css
lib/: CMakeLists.txt
lib/Calibration/: CMakeLists.txt  InputDataInterpreter.cpp  InputDataInterpreter.h  InputDataInterpreterOsim.cpp  InputDataInterpreterOsim.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h  SimulatedAnnealingParameters.h  TorquesComputation.cpp  TorquesComputation.h  TrialData.cpp  TrialData.h
lib/Calibration/ObjectiveFunctions/: ObjectiveFunction.h  SumMinObjectiveFunction_singleF.cpp  SumMinObjectiveFunction_singleF.h
lib/Calibration/SimAnnealParameters/: ParametersFromXml.cpp  ParametersFromXml.h  ParametersToOptimize.h  StrengthCoefficients_ShapeFactor_C1_C2_TendonSlackLength_single.cpp  StrengthCoefficients_ShapeFactor_C1_C2_TendonSlackLength_single.h  StrengthCoefficients_Single_ShapeFactor_C1_C2_TendonSlackLength_use_last_Dof_only.cpp  StrengthCoefficients_Single_ShapeFactor_C1_C2_TendonSlackLength_use_last_Dof_only.h
lib/Calibration/TorqueComputationModes/: ComputationMode_Default.cpp  ComputationMode_Default.h  ComputationMode_Fast.cpp  ComputationMode_Fast.h
lib/Concurrency/: CMakeLists.txt  Latch.cpp  Latch.h  Queue.cpp  Queue.h
lib/Curve/: CMakeLists.txt  CircularVector.cpp  CircularVector.h  Curve.cpp  Curve.h
lib/Curve/ceinms/: CircularVector.cpp  Curve.cpp  Curve.h
lib/FileIO/: CMakeLists.txt  DataFromFile.cpp  DataFromFile.h  DataFromStorageFile.cpp  DataFromStorageFile.h  EMGDataFromFile.cpp  EMGDataFromFile.h  ExcitationGeneratorFromXml.cpp  ExcitationGeneratorFromXml.h  policyTemplates.h
lib/FileIO/EMGgenerator/: CMakeLists.txt  EMGgeneratorFrom10To13.cpp  EMGgeneratorFrom10To13.h  EMGgeneratorFrom16To34.cpp  EMGgeneratorFrom16To34.h  EMGgeneratorFrom6To24.cpp  EMGgeneratorFrom6To24.h  EMGgeneratorFromXml.cpp  EMGgeneratorFromXml.h
lib/FileIO/ceinms/: DataFromFile.h  DataFromStorageFile.h  EMGDataFromFile.h  ExcitationGeneratorFromXml.h
lib/Hybrid/: CMakeLists.txt  ErrorMinimizerAnnealing.cpp  ErrorMinimizerAnnealing.h  HybridWeightings.h  SimulatedAnnealingBase.cpp  SimulatedAnnealingBase.h  StaticComputation.cpp  StaticComputation.h
lib/Hybrid/ObjectiveFunction/: MinTorqueTrackEMGs.cpp  MinTorqueTrackEMGs.h
lib/Hybrid/Parameters/: RecursiveEMGs.cpp  RecursiveEMGs.h
lib/Hybrid/StaticComputationMode/: Default.cpp  Default.h
lib/Hybrid/ceinms/: ErrorMinimizerAnnealing.cpp  ErrorMinimizerAnnealing.h  HybridWeightings.h  SimulatedAnnealingBase.cpp  SimulatedAnnealingBase.h  StaticComputation.cpp  StaticComputation.h
lib/InputConnectors/: CMakeLists.txt  EMGFromX.cpp  EMGFromX.h  ExternalTorqueFromX.cpp  ExternalTorqueFromX.h  ExternalTorquesFromX.cpp  ExternalTorquesFromX.h  InputConnectors.cpp  InputConnectors.h  InputQueues.cpp  InputQueues.h  LmtMaFromX.cpp  LmtMaFromX.h
lib/InputConnectors/FromFile/: EMGFromFile.cpp  EMGFromFile.h  ExternalTorqueFromFile.cpp  ExternalTorqueFromFile.h  ExternalTorquesFromStorageFile.cpp  ExternalTorquesFromStorageFile.h  LmtMaFromFile.cpp  (+3 more)
lib/NMSmodel/: CMakeLists.txt  DoF.cpp  DoF.h  MTU.cpp  MTU.h  MTUutils.cpp  MTUutils.h  MuscleParameters.cpp  MuscleParameters.h  NMSmodel.cpp  NMSmodel.h  NMSmodelPolicyTemplates.h  SetupDataStructure.cpp  SetupDataStructure.h
lib/OdeInt/: CMakeLists.txt  Odeint.h  Output.h  StepperBase.h  StepperDopr5.h
lib/OptimizerSystems/: AbstractOptimizerSystem.h  BatchEvaluator.cpp  BatchEvaluator.h  CMakeLists.txt  DataTable.h  MinTorqueError.cpp  MinTorqueError.h  NMSmodelSystem.cpp  NMSmodelSystem.h  ParametersFromXml.cpp  ParametersFromXml.h  ParametersInterpreter.cpp  ParametersInterpreter.h  Result.cpp  Result.h  TrialData.h
lib/Optimizers/: AbstractObjectiveFunction.h  AbstractOptimizer.h  AbstractOptimizerSystem.h  CMakeLists.txt  SimulatedAnnealing.cpp  SimulatedAnnealing.h
lib/OutputConnectors/: CMakeLists.txt  LoggerOnQueues.cpp  LoggerOnQueues.h  OutputConnectors.cpp  OutputConnectors.h  OutputQueues.cpp  OutputQueues.h  QueuesToTrialData.cpp  QueuesToTrialData.h
lib/Producers/: CMakeLists.txt  DataSynchronizer.h  EMGFromX.cpp  EMGFromX.h  ExternalTorqueFromX.cpp  ExternalTorqueFromX.h  LmtMaFromX.cpp  LmtMaFromX.h  Semaphore.cpp  Semaphore.h  SyncTools.cpp  SyncTools.h
lib/RootSolvers/: CMakeLists.txt  WDBsolver.h
lib/TrialData/: CMakeLists.txt  DataTable.cpp  DataTable.h  TrialData.h
lib/common/: ArrayConverter.h  CMakeLists.txt  FileUtils.cpp  FileUtils.h  NumCompare.h  Parameter.cpp  Parameter.h  QueueData.h  SimulatedAnnealingParameters.h  TimeCompare.h
lib/xmlInput/: CMakeLists.txt  CalibrationCfg.h  CalibrationXmlReader.cpp  CalibrationXmlReader.h  CeinmsCalibrationSetupXmlReader.cpp  CeinmsCalibrationSetupXmlReader.h  CeinmsSetupXmlReader.cpp  CeinmsSetupXmlReader.h  EmgGeneratorXmlReader.cpp  EmgGeneratorXmlReader.h  ExcitationGeneratorXmlReader.cpp  ExcitationGeneratorXmlReader.h  ExecutionXmlReader.cpp  ExecutionXmlReader.h  InputDataXmlReader.cpp  InputDataXmlReader.h  NMSmodel.cxx  NMSmodel.hxx  NMSmodelConfig.h  SubjectXmlReader.cpp  SubjectXmlReader.h  calibration.cxx  calibration.hxx  emgGenerator.cxx  emgGenerator.hxx  execution.cxx  execution.hxx  simulatedAnnealing.cxx  simulatedAnnealing.hxx  subject.cxx  subject.hxx  validation.h
src/: CEINMS-osim.cpp  CEINMS.cpp  CEINMScalibration-osim.cpp  CEINMScalibration.cpp  CMakeLists.txt  CalibrationManager.cpp  CalibrationManager.h  Logger.h  ModelEvaluation.cpp  ModelEvaluation.h  ModelEvaluationBase.cpp  ModelEvaluationBase.h  ModelEvaluationHybrid.cpp  ModelEvaluationHybrid.h  ModelEvaluationOffline.cpp  ModelEvaluationOffline.h  ModelEvaluationOfflineStiffness.cpp  ModelEvaluationOfflineStiffness.h  ModelEvaluationOnline.cpp  ModelEvaluationOnline.h  ProducersFromOpenSim.cpp  ProducersFromOpenSim.h  SimpleFileLogger.h  SimulationManager.cpp  SimulationManager.h  StorageLogger.h  TestInputConnectors.cpp  XmlWriter.cpp  XmlWriter.h  mainCalibrate_AllDof.cpp
src/Tests/: CMakeLists.txt
(+455 files in other folders)
