## Authors: Monica Reggiani, Claudio Pizzolato
add_subdirectory(common)
add_subdirectory(xmlInput)
add_subdirectory(FileIO)
#add_subdirectory(FileIO/EMGgenerator)
add_subdirectory(Curve)
add_subdirectory(OdeInt)
add_subdirectory(RootSolvers)
add_subdirectory(NMSmodel)
add_subdirectory(Calibration)
add_subdirectory(Concurrency) # to be substituted with external repository
add_subdirectory(InputConnectors)
add_subdirectory(OutputConnectors)
add_subdirectory(Optimizers)
add_subdirectory(OptimizerSystems)
