## Authors: Monica Reggiani, Claudio Pizzolato
add_subdirectory(common)
add_subdirectory(xmlInput)
add_subdirectory(FileIO)
add_subdirectory(Curve)
add_subdirectory(OdeInt)
add_subdirectory(RootSolvers)
add_subdirectory(NMSmodel)
add_subdirectory(Hybrid)
add_subdirectory(TrialData)
add_subdirectory(InputConnectors)
add_subdirectory(OutputConnectors)
add_subdirectory(Optimizers)
add_subdirectory(OptimizerSystems)
